namespaces/live.cloud-platform.service.justice.gov.uk/workforce-management-dev/09-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/default-backend: nginx-errors
    nginx.ingress.kubernetes.io/custom-http-errors: "406"
    external-dns.alpha.kubernetes.io/set-identifier: hmpps-allocations-v1-2-workforce-management-dev-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  ingressClassName: default
  tls:
    - hosts:
      - hmpps-allocations-dev.hmpps.service.justice.gov.uk
      secretName: hmpps-allocations-cert
  rules:
    - host: hmpps-allocations-dev.hmpps.service.justice.gov.uk
      http:
        paths:
        - backend:
            service:
              name: hmpps-allocations
              port:
                number: 80
          path: /
          pathType: ImplementationSpecific
        - backend:
            service:
              name: hmpps-allocations
              port:
                number: 80
          path: /health
          pathType: ImplementationSpecific
